@@ -387,50 +387,38 @@ function apppointments_is_range_busy( $start, $end, $args = array() ) {
 	    'location_id' => 0,
 		'capacity'    => 0,
 	);
-    $args = wp_parse_args( $args, $defaults );
-    $apps = array();
-
-    l($args['worker_id']);
-
+	$args = wp_parse_args( $args, $defaults );
+	$apps = array();
 	$args['week'] = $week = date( 'W', $start );
 	$period = new App_Period( $start, $end );
 	// If a specific worker is selected, we will look at his schedule first.
 	if ( 0 == $args['worker_id'] ) {
-        $apps = appointments_get_appointments( $args );
-        if ( 0 === $args['capacity' ] ) {
-            $workers = appointments_get_workers_by_service( $args['service_id'] );
-            $args['capacity'] = count( $workers );
-        }
-    } else {
+		$apps = appointments_get_appointments( $args );
+		if ( 0 === $args['capacity'] ) {
+			$workers = appointments_get_workers_by_service( $args['service_id'] );
+			$args['capacity'] = count( $workers );
+		}
+	} else {
 		if ( ! appointments_is_working( $start, $end, $args['worker_id'], $args['location_id'] ) ) {
 			return true;
 		}
-        $apps = $appointments->get_reserve_apps_by_worker( $args['location_id'], $args['worker_id'], $week );
-       
-       
-       l($apps);
-        $args['capacity'] = 1;
-    }
-
-//l($args);
-
+		$apps = $appointments->get_reserve_apps_by_worker( $args['location_id'], $args['worker_id'], $week );
+		$args['capacity'] = 1;
+	}
 	$is_busy = false;
-    if ( 0 !== $args['capacity'] && $apps ) {
-        $counter = 0;
+	if ( 0 !== $args['capacity'] && $apps ) {
+		$counter = 0;
 		foreach ( $apps as $app ) {
 			//if ( $start >= strtotime( $app->start ) && $end <= strtotime( $app->end ) ) return true;
 			$app_properties = apply_filters( 'app-properties-for-calendar', array( 'start' => $app->start, 'end' => $app->end ), $app, $args );
 
-            if ( $period->contains( $app_properties['start'], $app_properties['end'], true ) ) {
-                $counter++;
+			if ( $period->contains( $app_properties['start'], $app_properties['end'], true ) ) {
+				$counter++;
 			}
-        }
-
-//l($counter);
-
-        if ( $counter >= $args['capacity'] ) {
-            $is_busy = true;
-        }
+		}
+		if ( $counter >= $args['capacity'] ) {
+			$is_busy = true;
+		}
 	}
 	// If we're here, no worker is set or (s)he's not busy by default. Let's go for quick filter trip.
 	$is_busy = apply_filters( 'app-is_busy', $is_busy, $period );
