@@ -2,6 +2,8 @@
 -------------------------------
 - Added limit for "Service Capacity" on a service add and edit screen to the number of defined workers.
 - Fixed a problem with more than one Service Provider on schedule table, when first is already busy, but second is not.
+- Improved adding a new service provider, when is only one servive it will be checked by default.
+- Fixed problems with capacity.
 
 2018-05-24 - 2.3.0
 -------------------------------
